--- a/mlops/generate.ipynb
+++ b/mlops/generate.ipynb
@@ -201,11 +201,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wu3bIIa9PxW-",
-        "outputId": "8675eebc-7594-4944-9b79-00933fcdfa42",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wu3bIIa9PxW-",
+        "outputId": "8675eebc-7594-4944-9b79-00933fcdfa42"
       },
       "source": [
         "np.unique(y, return_counts=True)"
@@ -229,12 +229,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pHx8S17RRyTx",
-        "outputId": "c155bfe0-3d17-426e-bfd1-4f5d8f59677e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 488
-        }
+        },
+        "id": "pHx8S17RRyTx",
+        "outputId": "c155bfe0-3d17-426e-bfd1-4f5d8f59677e"
       },
       "source": [
         "GREEN = 1\n",
@@ -427,12 +427,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K_VBxKgz9QsX",
-        "outputId": "8d8e2fdf-e549-4b27-cf68-52612f4b6a96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
-        }
+        },
+        "id": "K_VBxKgz9QsX",
+        "outputId": "8d8e2fdf-e549-4b27-cf68-52612f4b6a96"
       },
       "source": [
         "df.head(10)"
@@ -577,12 +577,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gbMqR8Xf7t_5",
-        "outputId": "b7ff1467-091b-4204-d4a9-385c5fe7fa04",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 597
-        }
+        },
+        "id": "gbMqR8Xf7t_5",
+        "outputId": "b7ff1467-091b-4204-d4a9-385c5fe7fa04"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -629,12 +629,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TzYijR_W67_a",
-        "outputId": "1ce51886-4a65-4e00-87d9-f85625db6d29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "TzYijR_W67_a",
+        "outputId": "1ce51886-4a65-4e00-87d9-f85625db6d29"
       },
       "source": [
         "import seaborn as sns\n",
@@ -673,12 +673,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_DySL8dD7ONS",
-        "outputId": "e7ec4022-f8e7-4e9e-c55f-722ada209f53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 742
-        }
+        },
+        "id": "_DySL8dD7ONS",
+        "outputId": "e7ec4022-f8e7-4e9e-c55f-722ada209f53"
       },
       "source": [
         "sample_df = df.sample(n=200, random_state=42)\n",
@@ -704,12 +704,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TreX2lvHacR2",
-        "outputId": "78ef7b92-5d33-4162-c8da-3d76131e0963",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 314
-        }
+        },
+        "id": "TreX2lvHacR2",
+        "outputId": "78ef7b92-5d33-4162-c8da-3d76131e0963"
       },
       "source": [
         "df.drop(['group'], inplace=True, axis=1)"
@@ -736,12 +736,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JQ3ChnHLalk0",
-        "outputId": "eaccdc9a-af61-4cdb-e574-15939532c03d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "JQ3ChnHLalk0",
+        "outputId": "eaccdc9a-af61-4cdb-e574-15939532c03d"
       },
       "source": [
         "df.describe()"
@@ -859,29 +859,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K3SEBR08F9QD"
+        "id": "HaFFAozqcLS6"
       },
       "source": [
-        "# df.to_csv('./insurance-customers-300-2.csv', sep=';', index=False)\n",
-        "# df.to_csv('./insurance-customers-300.csv', sep=';', index=False)\n",
-        "df.to_csv('./insurance-customers-risk-1500.csv', sep=';', index=False)\n",
-        "# df.to_csv('./insurance-customers-10000.csv', sep=';', index=False)\n",
-        "# df.to_csv('./insurance-customers-500-test.csv', sep=';', index=False)"
+        "file_name = './insurance-customers-risk-1500.csv'"
       ],
-      "execution_count": 197,
+      "execution_count": 204,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jVAoDG-iF9QE"
+        "id": "K3SEBR08F9QD"
       },
       "source": [
-        "# check\n",
-        "# !curl -O https://raw.githubusercontent.com/DJCordhose/data-viz/master/data/insurance-customers-1500.csv\n",
-        "# !curl -O https://raw.githubusercontent.com/DJCordhose/data-viz/master/data/insurance-customers-300.csv    "
+        "df.to_csv(file_name, sep=';', index=False)"
       ],
-      "execution_count": null,
+      "execution_count": 202,
       "outputs": []
     },
     {
@@ -891,18 +885,69 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e5e2dbc-da43-472d-db83-bfe748ccc880"
+        "outputId": "e50ea061-8e3b-4286-bb68-66fa747ef627"
       },
       "source": [
         "!ls -l"
       ],
-      "execution_count": 198,
+      "execution_count": 203,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "total 56\n",
-            "-rw-r--r-- 1 root root 51476 Jul  9 17:57 insurance-customers-risk-1500.csv\n",
+            "-rw-r--r-- 1 root root 51476 Jul  9 18:04 insurance-customers-risk-1500.csv\n",
+            "drwxr-xr-x 1 root root  4096 Jul  1 13:42 sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jVAoDG-iF9QE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ffe2f3ad-1cc3-4e9f-d532-7ab669c7fe61"
+      },
+      "source": [
+        "# check\n",
+        "!curl -O https://raw.githubusercontent.com/embarced/notebooks/master/mlops/insurance-customers-risk-1500.csv"
+      ],
+      "execution_count": 207,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r 15 51476   15  7750    0     0  50653      0  0:00:01 --:--:--  0:00:01 50653\r100 51476  100 51476    0     0   308k      0 --:--:-- --:--:-- --:--:--  306k\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xkQf8JQ3ceM3",
+        "outputId": "cd4e6799-ad4e-42cb-9067-a2189b400d11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ls -l"
+      ],
+      "execution_count": 208,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "total 56\n",
+            "-rw-r--r-- 1 root root 51476 Jul  9 18:06 insurance-customers-risk-1500.csv\n",
             "drwxr-xr-x 1 root root  4096 Jul  1 13:42 sample_data\n"
           ],
           "name": "stdout"
@@ -915,12 +960,9 @@
         "id": "XTaH5uMkF9QN"
       },
       "source": [
-        "# customers = pd.read_csv('./insurance-customers-300.csv', sep=';')\n",
-        "customers = pd.read_csv('./insurance-customers-risk-1500.csv', sep=';')\n",
-        "# customers = pd.read_csv('./insurance-customers-10000.csv', sep=';')\n",
-        "# customers = pd.read_csv('./insurance-customers-500-test.csv', sep=';')"
+        "customers = pd.read_csv(file_name, sep=';')"
       ],
-      "execution_count": 199,
+      "execution_count": 209,
       "outputs": []
     },
     {
@@ -931,12 +973,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 297
         },
-        "outputId": "892d3442-265b-4005-c315-b43e466a674d"
+        "outputId": "3a780359-bbd2-4c9e-843e-fe92d4b379ac"
       },
       "source": [
         "customers.describe()"
       ],
-      "execution_count": 200,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1042,7 +1084,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 200
+          "execution_count": 210
         }
       ]
     },
