--- a/deep/autoencoder-outlier-detection.ipynb
+++ b/deep/autoencoder-outlier-detection.ipynb
@@ -45,7 +45,7 @@
         "id": "XdfXfXK2-CiG"
       },
       "source": [
-        "# Introduction to Autoencoders"
+        "# Autoencoders for Outlier Detection"
       ]
     },
     {
