--- a/mlops/2_mlops_serve.ipynb
+++ b/mlops/2_mlops_serve.ipynb
@@ -5,7 +5,7 @@
    "id": "f4f751ec",
    "metadata": {},
    "source": [
-    "# Serve Model"
+    "# Serve Model - piece of cake"
    ]
   },
   {
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7efce103afa0>"
+       "<keras.engine.sequential.Sequential at 0x7f6d536f4fd0>"
       ]
      },
      "execution_count": 3,
@@ -114,38 +114,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "6316d556",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 60.8 ms, sys: 2.49 ms, total: 63.3 ms\n",
+      "Wall time: 54.3 ms\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([[0.02556643, 0.1980141 , 0.77641946]], dtype=float32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "reconstructed_model.predict([[48, 100]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "f8fe8670",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_SignatureMap({'serving_default': <ConcreteFunction signature_wrapper(*, input) at 0x7EFCD00996A0>})"
+       "_SignatureMap({'serving_default': <ConcreteFunction signature_wrapper(*, input) at 0x7F6CE43C13D0>})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "a769b4ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ConcreteFunction signature_wrapper(*, input) at 0x7EFCD00996A0>"
+       "<ConcreteFunction signature_wrapper(*, input) at 0x7F6CE43C13D0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "8f549c6b",
    "metadata": {},
    "outputs": [
@@ -188,7 +198,7 @@
        "<tf.Tensor: shape=(1, 2), dtype=float32, numpy=array([[ 48., 100.]], dtype=float32)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,22 +210,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "1b442b32",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.24 ms, sys: 898 µs, total: 3.14 ms\n",
+      "Wall time: 2.02 ms\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{'output': <tf.Tensor: shape=(1, 3), dtype=float32, numpy=array([[0.02556643, 0.1980141 , 0.77641946]], dtype=float32)>}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "inference_fn(input=t)"
    ]
   },
