--- a/mlops/2_mlops_serve.ipynb
+++ b/mlops/2_mlops_serve.ipynb
@@ -5,7 +5,17 @@
    "id": "f4f751ec",
    "metadata": {},
    "source": [
-    "# Serve Model - piece of cake"
+    "# Serve Model\n",
+    "\n",
+    "## Story\n",
+    "* We have a fully trained TensorFlow model\n",
+    "* TensorFlow models are ideal to bring them into production\n",
+    "* The model is stored as a computational graph and can be executed pretty much anywhere\n",
+    "  1. We can just load the saved model and exeute it from Python or\n",
+    "  1. There is a specific CC built server that can just serve it\n",
+    "  1. It will run in the Cloud as is\n",
+    "  1. Can be integrated into Java\n",
+    "* Even Docker can be made to have access to GPU"
    ]
   },
   {
