--- a/mlops/3_mlops_shift.ipynb
+++ b/mlops/3_mlops_shift.ipynb
@@ -6,7 +6,15 @@
     "id": "XdfXfXK2-CiG"
    },
    "source": [
-    "# Data and Concept Drift"
+    "# Data and Concept Drift\n",
+    "\n",
+    "1. Once a production a model sees certain data for prediction\n",
+    "1. We hope that data matches shape and distribution of the data we used to train the model\n",
+    "1. We also hope that our model performs well on new data and that its performance does not degrade over time\n",
+    "1. Experience reports of the contrary\n",
+    "   * Regularly data distributions change and model performance is not good\n",
+    "1. We need a workflow to detect that\n",
+    "1. It is also desirable to make the work we did in step 1 reproducable"
    ]
   },
   {
