--- a/mlops/4_mlops_tfx_training.ipynb
+++ b/mlops/4_mlops_tfx_training.ipynb
@@ -8,7 +8,39 @@
    "source": [
     "# Creating a reproducible pipeline using TFX\n",
     "\n",
-    "Parts copied from: https://colab.research.google.com/github/tensorflow/tfx/blob/master/docs/tutorials/tfx/penguin_simple.ipynb"
+    "![](https://www.tensorflow.org/tfx/guide/images/prog_fin.png)\n",
+    "          \n",
+    "\n",
+    "## Story\n",
+    "1. To make work reproducible we define the workflow as a TFX pipeline\n",
+    "1. Additionally we generate statistics from the data we use for training\n",
+    "1. After training, before pushing to next stage (possibly integration or production) we execute a couple of tests working as binary predictates\n",
+    "   * Tesla does this with their models for autonomous driving: https://youtu.be/hx7BXih7zx8?t=776\n",
+    "   * Could be like: \n",
+    "     * for well known inputs we expect outputs known to be correct within a certain margin\n",
+    "     * certain scores need to be matched\n",
+    "     \n",
+    "\n",
+    "## Resources     \n",
+    "Parts copied from https://www.tensorflow.org/tfx/guide#tfx_standard_components: \n",
+    "1. **Basics:** https://colab.research.google.com/github/tensorflow/tfx/blob/master/docs/tutorials/tfx/penguin_simple.ipynb\n",
+    "  * ExampleGen is the initial input component of a pipeline that ingests and optionally splits the input dataset: https://www.tensorflow.org/tfx/guide/examplegen\n",
+    "  * Trainer trains the model: https://www.tensorflow.org/tfx/guide/trainer\n",
+    "  * Pusher deploys the model on a serving infrastructure: https://www.tensorflow.org/tfx/guide/pusher\n",
+    "1. **Data validation:** https://colab.research.google.com/github/tensorflow/tfx/blob/master/docs/tutorials/tfx/penguin_tfdv.ipynb\n",
+    "  * https://www.tensorflow.org/tfx/guide/tfdv\n",
+    "  * StatisticsGen calculates statistics for the dataset: https://www.tensorflow.org/tfx/guide/statsgen\n",
+    "  * SchemaGen examines the statistics and creates a data schema: https://www.tensorflow.org/tfx/guide/schemagen\n",
+    "  * ExampleValidator looks for anomalies and missing values in the dataset: https://www.tensorflow.org/tfx/guide/exampleval\n",
+    "1. **Feature Engineering:** https://colab.research.google.com/github/tensorflow/tfx/blob/master/docs/tutorials/tfx/penguin_tft.ipynb\n",
+    "  * https://www.tensorflow.org/tfx/guide/tft\n",
+    "  * Transform performs feature engineering on the dataset: https://www.tensorflow.org/tfx/guide/transform\n",
+    "1. **Model Analysis:** https://colab.research.google.com/github/tensorflow/tfx/blob/master/docs/tutorials/tfx/penguin_tfma.ipynb\n",
+    "  * https://www.tensorflow.org/tfx/guide/tfma\n",
+    "  * Evaluator performs deep analysis of the training results and helps you validate your exported models, ensuring that they are \"good enough\" to be pushed to production: https://www.tensorflow.org/tfx/guide/evaluator\n",
+    "\n",
+    "https://www.tensorflow.org/tfx/tutorials\n",
+    "\n"
    ]
   },
   {
