--- a/mlops/4_mlops_tfx_training.ipynb
+++ b/mlops/4_mlops_tfx_training.ipynb
@@ -79,6 +79,8 @@
    "outputs": [],
    "source": [
     "from absl import logging\n",
+    "\n",
+    "# logging.set_verbosity(logging.INFO)\n",
     "logging.set_verbosity(logging.WARNING)"
    ]
   },
@@ -129,7 +131,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 54421  100 54421    0     0   142k      0 --:--:-- --:--:-- --:--:--  142k\n"
+      "100 54421  100 54421    0     0   345k      0 --:--:-- --:--:-- --:--:--  342k\n"
      ]
     }
    ],
@@ -153,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "total 112\r\n",
-      "-rw-r--r-- 1 olli olli 54421 Oct 27 16:48 data.csv\r\n",
+      "-rw-r--r-- 1 olli olli 54421 Oct 29 16:02 data.csv\r\n",
       "-rw-r--r-- 1 olli olli 54500 Oct 27 16:09 drifted-data.csv\r\n"
      ]
     }
@@ -209,34 +211,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 12976\r\n",
-      "-rw-r--r-- 1 olli olli 1431909 Oct 24 18:13 1_mlops_train.ipynb\r\n",
-      "-rw-r--r-- 1 olli olli  175341 Oct 26 17:29 2_mlops_serve.ipynb\r\n",
-      "-rw-r--r-- 1 olli olli 1686560 Oct 26 17:09 3_mlops_shift.ipynb\r\n",
-      "-rw-r--r-- 1 olli olli   23135 Oct 27 16:47 4_mlops_tfx_training.ipynb\r\n",
-      "-rw-r--r-- 1 olli olli    4713 Oct 27 16:13 FeatureStats.pb\r\n",
-      "drwxr-xr-x 2 olli olli    4096 Oct 27 16:15 __pycache__\r\n",
-      "drwxr-xr-x 4 olli olli    4096 Oct 24 17:34 classifier\r\n",
-      "-rw-r--r-- 1 olli olli 3130024 Oct 26 17:09 classifier.h5\r\n",
-      "-rw-r--r-- 1 olli olli 2892775 Oct 24 17:34 classifier.tgz\r\n",
-      "drwxr-xr-x 2 olli olli    4096 Oct 27 16:09 data\r\n",
-      "drwxr-xr-x 2 olli olli    4096 Oct 27 16:12 drifted_data\r\n",
-      "-rw-r--r-- 1 olli olli 2110237 Aug 14 20:29 generate.ipynb\r\n",
-      "drwxr-xr-x 3 olli olli    4096 Oct 24 18:42 insurance\r\n",
-      "-rw-r--r-- 1 olli olli   54500 Aug 14 20:29 insurance-customers-risk-1500-shift.csv\r\n",
-      "-rw-r--r-- 1 olli olli   54435 Aug 14 20:29 insurance-customers-risk-1500-test.csv\r\n",
-      "-rw-r--r-- 1 olli olli   54421 Aug 14 20:29 insurance-customers-risk-1500.csv\r\n",
-      "-rw-r--r-- 1 olli olli  237568 Oct 27 16:15 metadata.db\r\n",
-      "-rw-r--r-- 1 olli olli   40766 Oct 27 16:38 mlops_tfx_playground.ipynb\r\n",
-      "drwxr-xr-x 7 olli olli    4096 Oct 27 16:15 model\r\n",
-      "-rw-r--r-- 1 olli olli   84726 Oct 26 16:53 model.png\r\n",
-      "drwxr-xr-x 2 olli olli    4096 Oct 27 16:11 original_data\r\n",
-      "drwxr-xr-x 9 olli olli    4096 Oct 27 15:50 pipeline\r\n",
-      "drwxr-xr-x 2 olli olli    4096 Oct 27 15:56 schema\r\n",
-      "drwxr-xr-x 5 olli olli    4096 Oct 26 18:19 schema-pipeline\r\n",
-      "drwxr-xr-x 5 olli olli    4096 Oct 26 18:19 schema_pipeline\r\n",
-      "-rw-r--r-- 1 olli olli 1225551 Aug 14 20:29 train.ipynb\r\n",
-      "-rw-r--r-- 1 olli olli    3668 Oct 27 16:13 trainer.py\r\n"
+      "total 14844\r\n",
+      "-rw-r--r--  1 olli olli 1433875 Oct 28 13:48 1_mlops_train.ipynb\r\n",
+      "-rw-r--r--  1 olli olli 1819071 Oct 28 14:03 1_mlops_train_nsl.ipynb\r\n",
+      "-rw-r--r--  1 olli olli  175864 Oct 28 14:03 2_mlops_serve.ipynb\r\n",
+      "-rw-r--r--  1 olli olli 1687116 Oct 28 14:03 3_mlops_shift.ipynb\r\n",
+      "-rw-r--r--  1 olli olli   47260 Oct 29 16:02 4_mlops_tfx_training.ipynb\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 29 16:00 __pycache__\r\n",
+      "drwxr-xr-x  4 olli olli    4096 Oct 28 10:40 classifier\r\n",
+      "-rw-r--r--  1 olli olli 3126552 Oct 28 10:40 classifier.h5\r\n",
+      "-rw-r--r--  1 olli olli 2891405 Oct 28 10:40 classifier.tgz\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 27 16:09 data\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 27 16:12 drifted_data\r\n",
+      "-rw-r--r--  1 olli olli 2110237 Aug 14 20:29 generate.ipynb\r\n",
+      "drwxr-xr-x  3 olli olli    4096 Oct 24 18:42 insurance\r\n",
+      "-rw-r--r--  1 olli olli   54500 Aug 14 20:29 insurance-customers-risk-1500-shift.csv\r\n",
+      "-rw-r--r--  1 olli olli   54435 Aug 14 20:29 insurance-customers-risk-1500-test.csv\r\n",
+      "-rw-r--r--  1 olli olli   54421 Aug 14 20:29 insurance-customers-risk-1500.csv\r\n",
+      "-rw-r--r--  1 olli olli  311296 Oct 29 16:00 metadata.db\r\n",
+      "-rw-r--r--  1 olli olli   40766 Oct 27 16:58 mlops_tfx_playground.ipynb\r\n",
+      "drwxr-xr-x 10 olli olli    4096 Oct 29 15:45 model\r\n",
+      "-rw-r--r--  1 olli olli   84726 Oct 26 16:53 model.png\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 27 16:11 original_data\r\n",
+      "drwxr-xr-x 10 olli olli    4096 Oct 29 15:33 pipeline\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 27 16:56 schema\r\n",
+      "drwxr-xr-x  5 olli olli    4096 Oct 26 18:19 schema-pipeline\r\n",
+      "drwxr-xr-x  5 olli olli    4096 Oct 26 18:19 schema_pipeline\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 27 16:56 stats\r\n",
+      "-rw-r--r--  1 olli olli 1225551 Aug 14 20:29 train.ipynb\r\n",
+      "-rw-r--r--  1 olli olli    3928 Oct 29 16:00 trainer.py\r\n"
      ]
     }
    ],
@@ -420,6 +423,8 @@
    },
    "outputs": [],
    "source": [
+    "import tensorflow_model_analysis as tfma\n",
+    "\n",
     "def _create_pipeline(pipeline_name: str, pipeline_root: str, data_root: str,\n",
     "                     module_file: str, serving_model_dir: str,\n",
     "                     metadata_path: str) -> tfx.dsl.Pipeline:\n",
@@ -439,18 +444,66 @@
     "      train_args=tfx.proto.TrainArgs(num_steps=5000),\n",
     "      eval_args=tfx.proto.EvalArgs(num_steps=15))\n",
     "\n",
-    "  # Pushes the model to a filesystem destination.\n",
+    "  #Get the latest blessed model for Evaluator.\n",
+    "  model_resolver = tfx.dsl.Resolver(\n",
+    "      strategy_class=tfx.dsl.experimental.LatestBlessedModelStrategy,\n",
+    "      model=tfx.dsl.Channel(type=tfx.types.standard_artifacts.Model),\n",
+    "      model_blessing=tfx.dsl.Channel(\n",
+    "          type=tfx.types.standard_artifacts.ModelBlessing)).with_id(\n",
+    "              'latest_blessed_model_resolver')\n",
+    "\n",
+    "  #Uses TFMA to compute evaluation statistics over features of a model and\n",
+    "  #   perform quality validation of a candidate model (compared to a baseline).\n",
+    "\n",
+    "  eval_config = tfma.EvalConfig(\n",
+    "      model_specs=[tfma.ModelSpec(label_key='group')],\n",
+    "      slicing_specs=[\n",
+    "          # An empty slice spec means the overall slice, i.e. the whole dataset.\n",
+    "          tfma.SlicingSpec(),\n",
+    "          # Calculate metrics for each risk group\n",
+    "          tfma.SlicingSpec(feature_keys=['group']),\n",
+    "          ],\n",
+    "      metrics_specs=[\n",
+    "          tfma.MetricsSpec(per_slice_thresholds={\n",
+    "              'sparse_categorical_accuracy':\n",
+    "                  tfma.PerSliceMetricThresholds(thresholds=[\n",
+    "                      tfma.PerSliceMetricThreshold(\n",
+    "                          slicing_specs=[tfma.SlicingSpec()],\n",
+    "                          threshold=tfma.MetricThreshold(\n",
+    "                              value_threshold=tfma.GenericValueThreshold(\n",
+    "                                   lower_bound={'value': 0.6}),\n",
+    "                              # Change threshold will be ignored if there is no\n",
+    "                              # baseline model resolved from MLMD (first run).\n",
+    "                              change_threshold=tfma.GenericChangeThreshold(\n",
+    "                                  direction=tfma.MetricDirection.HIGHER_IS_BETTER,\n",
+    "                                  absolute={'value': -1e-10}))\n",
+    "                       )]),\n",
+    "          })],\n",
+    "      )\n",
+    "  evaluator = tfx.components.Evaluator(\n",
+    "      examples=example_gen.outputs['examples'],\n",
+    "      model=trainer.outputs['model'],\n",
+    "      baseline_model=model_resolver.outputs['model'],\n",
+    "      eval_config=eval_config)\n",
+    "\n",
+    "  # Checks whether the model passed the validation steps and pushes the model\n",
+    "  # to a file destination if check passed.\n",
     "  pusher = tfx.components.Pusher(\n",
     "      model=trainer.outputs['model'],\n",
+    "      model_blessing=evaluator.outputs['blessing'], # Pass an evaluation result.\n",
     "      push_destination=tfx.proto.PushDestination(\n",
     "          filesystem=tfx.proto.PushDestination.Filesystem(\n",
     "              base_directory=serving_model_dir)))\n",
     "\n",
-    "  # Following three components will be included in the pipeline.\n",
     "  components = [\n",
     "      example_gen,\n",
     "      statistics_gen,\n",
     "      trainer,\n",
+    "\n",
+    "      # Following two components were added to the pipeline.\n",
+    "      model_resolver,\n",
+    "      evaluator,\n",
+    "\n",
     "      pusher,\n",
     "  ]\n",
     "\n",
@@ -517,24 +570,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000/5000 [==============================] - 16s 3ms/step - loss: 0.8236 - sparse_categorical_accuracy: 0.6426 - val_loss: 0.6767 - val_sparse_categorical_accuracy: 0.7125\n",
-      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/69/Format-Serving/assets\n"
+      "5000/5000 [==============================] - 20s 4ms/step - loss: 0.8238 - sparse_categorical_accuracy: 0.6411 - val_loss: 0.6379 - val_sparse_categorical_accuracy: 0.7417\n",
+      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/108/Format-Serving/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/69/Format-Serving/assets\n",
-      "WARNING:absl:Pusher is going to push the model without validation. Consider using Evaluator or InfraValidator in your pipeline.\n"
+      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/108/Format-Serving/assets\n",
+      "WARNING:root:Make sure that locally built Python SDK docker image has Python 3.8 interpreter.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.8 s, sys: 12 s, total: 36.8 s\n",
-      "Wall time: 24.7 s\n"
+      "WARNING:tensorflow:From /home/olli/anaconda3/envs/tfx/lib/python3.8/site-packages/tensorflow_model_analysis/writers/metrics_plots_and_validations_writer.py:112: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/olli/anaconda3/envs/tfx/lib/python3.8/site-packages/tensorflow_model_analysis/writers/metrics_plots_and_validations_writer.py:112: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 40 s, sys: 15.8 s, total: 55.8 s\n",
+      "Wall time: 36.2 s\n"
      ]
     }
    ],
@@ -554,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -597,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,21 +686,24 @@
     "  example_artifacts = example_gen_output[standard_component_specs.EXAMPLES_KEY]\n",
     "\n",
     "  stat_gen_output = get_latest_artifacts(metadata_handler, \"insurance-basic\", 'StatisticsGen')\n",
-    "  stats_artifacts = stat_gen_output[standard_component_specs.STATISTICS_KEY]"
+    "  stats_artifacts = stat_gen_output[standard_component_specs.STATISTICS_KEY]\n",
+    "\n",
+    "  evaluator_output = get_latest_artifacts(metadata_handler, \"insurance-basic\", 'Evaluator')\n",
+    "  eval_artifact = evaluator_output[standard_component_specs.EVALUATION_KEY][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pipeline/StatisticsGen/statistics/68'"
+       "'pipeline/StatisticsGen/statistics/107'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -646,8 +722,8 @@
      "output_type": "stream",
      "text": [
       "total 8\r\n",
-      "drwxr-xr-x 2 olli olli 4096 Oct 27 16:48 Split-eval\r\n",
-      "drwxr-xr-x 2 olli olli 4096 Oct 27 16:48 Split-train\r\n"
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 16:02 Split-eval\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 16:02 Split-train\r\n"
      ]
     }
    ],
@@ -657,16 +733,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘stats’: File exists\r\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -747,6 +831,143 @@
    ],
    "source": [
     "visualize_artifacts(stats_artifacts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 8\r\n",
+      "drwxr-xr-x 7 olli olli 4096 Oct 29 16:03 blessing\r\n",
+      "drwxr-xr-x 7 olli olli 4096 Oct 29 16:03 evaluation\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l pipeline/Evaluator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 20\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 16:00 103\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 16:03 109\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 15:38 85\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 15:45 91\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Oct 29 15:53 97\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l pipeline/Evaluator/blessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 0\r\n",
+      "-rw-r--r-- 1 olli olli 0 Oct 29 15:45 BLESSED\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l pipeline/Evaluator/blessing/91"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-rw-r--r-- 1 olli olli 105 Oct 29 15:45 pipeline/Evaluator/evaluation/91/plots\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l pipeline/Evaluator/evaluation/91/plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 32\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 26 17:17 1635261467\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 26 17:32 1635262335\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 26 17:46 1635263194\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 27 15:57 1635343033\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 27 16:15 1635344127\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 27 16:49 1635346140\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 29 15:38 1635514703\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Oct 29 15:45 1635515159\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l model/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ddc01322e22e4f038d968765a7f91120",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "SlicingMetricsViewer(config={'weightedExamplesColumn': 'example_count'}, data=[{'slice': 'group:0', 'metrics':…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import tensorflow_model_analysis as tfma\n",
+    "\n",
+    "eval_result = tfma.load_eval_result(eval_artifact.uri)\n",
+    "tfma.view.render_slicing_metrics(eval_result, slicing_column='group')"
    ]
   },
   {
