--- a/mlops/4_mlops_tfx_training.ipynb
+++ b/mlops/4_mlops_tfx_training.ipynb
@@ -131,7 +131,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 54421  100 54421    0     0   345k      0 --:--:-- --:--:-- --:--:--  342k\n"
+      "100 54421  100 54421    0     0   148k      0 --:--:-- --:--:-- --:--:--  148k\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "total 112\r\n",
-      "-rw-r--r-- 1 olli olli 54421 Oct 29 16:02 data.csv\r\n",
+      "-rw-r--r-- 1 olli olli 54421 Nov  2 11:22 data.csv\r\n",
       "-rw-r--r-- 1 olli olli 54500 Oct 27 16:09 drifted-data.csv\r\n"
      ]
     }
@@ -216,8 +216,8 @@
       "-rw-r--r--  1 olli olli 1819071 Oct 28 14:03 1_mlops_train_nsl.ipynb\r\n",
       "-rw-r--r--  1 olli olli  175864 Oct 28 14:03 2_mlops_serve.ipynb\r\n",
       "-rw-r--r--  1 olli olli 1687116 Oct 28 14:03 3_mlops_shift.ipynb\r\n",
-      "-rw-r--r--  1 olli olli   47260 Oct 29 16:02 4_mlops_tfx_training.ipynb\r\n",
-      "drwxr-xr-x  2 olli olli    4096 Oct 29 16:00 __pycache__\r\n",
+      "-rw-r--r--  1 olli olli   22125 Nov  2 11:22 4_mlops_tfx_training.ipynb\r\n",
+      "drwxr-xr-x  2 olli olli    4096 Oct 29 16:02 __pycache__\r\n",
       "drwxr-xr-x  4 olli olli    4096 Oct 28 10:40 classifier\r\n",
       "-rw-r--r--  1 olli olli 3126552 Oct 28 10:40 classifier.h5\r\n",
       "-rw-r--r--  1 olli olli 2891405 Oct 28 10:40 classifier.tgz\r\n",
@@ -228,7 +228,7 @@
       "-rw-r--r--  1 olli olli   54500 Aug 14 20:29 insurance-customers-risk-1500-shift.csv\r\n",
       "-rw-r--r--  1 olli olli   54435 Aug 14 20:29 insurance-customers-risk-1500-test.csv\r\n",
       "-rw-r--r--  1 olli olli   54421 Aug 14 20:29 insurance-customers-risk-1500.csv\r\n",
-      "-rw-r--r--  1 olli olli  311296 Oct 29 16:00 metadata.db\r\n",
+      "-rw-r--r--  1 olli olli  335872 Oct 29 16:03 metadata.db\r\n",
       "-rw-r--r--  1 olli olli   40766 Oct 27 16:58 mlops_tfx_playground.ipynb\r\n",
       "drwxr-xr-x 10 olli olli    4096 Oct 29 15:45 model\r\n",
       "-rw-r--r--  1 olli olli   84726 Oct 26 16:53 model.png\r\n",
@@ -239,7 +239,7 @@
       "drwxr-xr-x  5 olli olli    4096 Oct 26 18:19 schema_pipeline\r\n",
       "drwxr-xr-x  2 olli olli    4096 Oct 27 16:56 stats\r\n",
       "-rw-r--r--  1 olli olli 1225551 Aug 14 20:29 train.ipynb\r\n",
-      "-rw-r--r--  1 olli olli    3928 Oct 29 16:00 trainer.py\r\n"
+      "-rw-r--r--  1 olli olli    3928 Oct 29 16:02 trainer.py\r\n"
      ]
     }
    ],
@@ -570,15 +570,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000/5000 [==============================] - 20s 4ms/step - loss: 0.8238 - sparse_categorical_accuracy: 0.6411 - val_loss: 0.6379 - val_sparse_categorical_accuracy: 0.7417\n",
-      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/108/Format-Serving/assets\n"
+      "5000/5000 [==============================] - 19s 4ms/step - loss: 0.8226 - sparse_categorical_accuracy: 0.6422 - val_loss: 0.6526 - val_sparse_categorical_accuracy: 0.7354\n",
+      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/114/Format-Serving/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/108/Format-Serving/assets\n",
+      "INFO:tensorflow:Assets written to: pipeline/Trainer/model/114/Format-Serving/assets\n",
       "WARNING:root:Make sure that locally built Python SDK docker image has Python 3.8 interpreter.\n"
      ]
     },
@@ -606,8 +606,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 40 s, sys: 15.8 s, total: 55.8 s\n",
-      "Wall time: 36.2 s\n"
+      "CPU times: user 37.9 s, sys: 15.9 s, total: 53.8 s\n",
+      "Wall time: 35.9 s\n"
      ]
     }
    ],
@@ -700,7 +700,7 @@
     {
      "data": {
       "text/plain": [
-       "'pipeline/StatisticsGen/statistics/107'"
+       "'pipeline/StatisticsGen/statistics/113'"
       ]
      },
      "execution_count": 16,
@@ -722,8 +722,8 @@
      "output_type": "stream",
      "text": [
       "total 8\r\n",
-      "drwxr-xr-x 2 olli olli 4096 Oct 29 16:02 Split-eval\r\n",
-      "drwxr-xr-x 2 olli olli 4096 Oct 29 16:02 Split-train\r\n"
+      "drwxr-xr-x 2 olli olli 4096 Nov  2 11:22 Split-eval\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Nov  2 11:22 Split-train\r\n"
      ]
     }
    ],
@@ -843,8 +843,8 @@
      "output_type": "stream",
      "text": [
       "total 8\r\n",
-      "drwxr-xr-x 7 olli olli 4096 Oct 29 16:03 blessing\r\n",
-      "drwxr-xr-x 7 olli olli 4096 Oct 29 16:03 evaluation\r\n"
+      "drwxr-xr-x 8 olli olli 4096 Nov  2 11:22 blessing\r\n",
+      "drwxr-xr-x 8 olli olli 4096 Nov  2 11:22 evaluation\r\n"
      ]
     }
    ],
@@ -861,9 +861,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 20\r\n",
+      "total 24\r\n",
       "drwxr-xr-x 2 olli olli 4096 Oct 29 16:00 103\r\n",
       "drwxr-xr-x 2 olli olli 4096 Oct 29 16:03 109\r\n",
+      "drwxr-xr-x 2 olli olli 4096 Nov  2 11:22 115\r\n",
       "drwxr-xr-x 2 olli olli 4096 Oct 29 15:38 85\r\n",
       "drwxr-xr-x 2 olli olli 4096 Oct 29 15:45 91\r\n",
       "drwxr-xr-x 2 olli olli 4096 Oct 29 15:53 97\r\n"
@@ -918,7 +919,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 32\r\n",
+      "total 36\r\n",
       "drwxr-xr-x 4 olli olli 4096 Oct 26 17:17 1635261467\r\n",
       "drwxr-xr-x 4 olli olli 4096 Oct 26 17:32 1635262335\r\n",
       "drwxr-xr-x 4 olli olli 4096 Oct 26 17:46 1635263194\r\n",
@@ -926,7 +927,8 @@
       "drwxr-xr-x 4 olli olli 4096 Oct 27 16:15 1635344127\r\n",
       "drwxr-xr-x 4 olli olli 4096 Oct 27 16:49 1635346140\r\n",
       "drwxr-xr-x 4 olli olli 4096 Oct 29 15:38 1635514703\r\n",
-      "drwxr-xr-x 4 olli olli 4096 Oct 29 15:45 1635515159\r\n"
+      "drwxr-xr-x 4 olli olli 4096 Oct 29 15:45 1635515159\r\n",
+      "drwxr-xr-x 4 olli olli 4096 Nov  2 11:22 1635848567\r\n"
      ]
     }
    ],
@@ -936,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,13 +947,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddc01322e22e4f038d968765a7f91120",
+       "model_id": "2204671703d242eba60799f8f34fbaf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -964,6 +966,8 @@
     }
    ],
    "source": [
+    "# https://www.tensorflow.org/tfx/tutorials/model_analysis/tfma_basic#rendering_metrics\n",
+    "\n",
     "import tensorflow_model_analysis as tfma\n",
     "\n",
     "eval_result = tfma.load_eval_result(eval_artifact.uri)\n",
