--- a/mlops/2_mlops_serve.ipynb
+++ b/mlops/2_mlops_serve.ipynb
@@ -2475,6 +2475,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f9bbedd",
+   "metadata": {},
+   "source": [
+    "## Start using Docker\n",
+    "\n",
+    "- TensorFlow with Docker: https://github.com/tensorflow/serving/blob/master/tensorflow_serving/g3doc/docker.md\n",
+    "- TFX Serving: https://www.tensorflow.org/tfx/serving/docker\n",
+    "- Complete example: https://github.com/embarced/notebooks/tree/master/tfx\n",
+    "- GPU support: \n",
+    "  - https://www.tensorflow.org/tfx/serving/docker#serving_with_docker_using_your_gpu\n",
+    "  - https://github.com/NVIDIA/nvidia-docker\n",
+    "    - https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/install-guide.html#docker\n",
+    "  - https://docs.docker.com/compose/gpu-support/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "c18e62b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curl: (7) Failed to connect to localhost port 8501: Connection refused\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# execute in extra shell when using with C++ server from this notebook\n",
+    "!curl -d '{\"instances\": [[50.0, 122.0], [48, 100], [30, 150]]}' -X POST http://localhost:8501/v1/models/insurance:predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c78e2314",
    "metadata": {},
    "source": [
@@ -2700,42 +2736,6 @@
    "source": [
     "!tensorflow_model_server --port=8500 --rest_api_port=8501 \\\n",
     "  --model_name=insurance --model_base_path=/home/olli/notebooks/mlops/insurance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "c18e62b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "curl: (7) Failed to connect to localhost port 8501: Connection refused\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "# execute in extra shell\n",
-    "!curl -d '{\"instances\": [[50.0, 122.0], [48, 100], [30, 150]]}' -X POST http://localhost:8501/v1/models/insurance:predict"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f9bbedd",
-   "metadata": {},
-   "source": [
-    "## Start using Docker\n",
-    "\n",
-    "- TensorFlow with Docker: https://github.com/tensorflow/serving/blob/master/tensorflow_serving/g3doc/docker.md\n",
-    "- TFX Serving: https://www.tensorflow.org/tfx/serving/docker\n",
-    "- Complete example: https://github.com/embarced/notebooks/tree/master/tfx\n",
-    "- GPU support: \n",
-    "  - https://www.tensorflow.org/tfx/serving/docker#serving_with_docker_using_your_gpu\n",
-    "  - https://github.com/NVIDIA/nvidia-docker\n",
-    "    - https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/install-guide.html#docker\n",
-    "  - https://docs.docker.com/compose/gpu-support/"
    ]
   },
   {
