--- a/mlops/2_mlops_serve.ipynb
+++ b/mlops/2_mlops_serve.ipynb
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "id": "c18e62b1",
    "metadata": {},
    "outputs": [
@@ -2500,13 +2500,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "curl: (7) Failed to connect to localhost port 8501: Connection refused\r\n"
+      "{\r\n",
+      "    \"predictions\": [[0.184337184, 0.28695032, 0.528712511], [0.0255763717, 0.198027506, 0.776396155], [0.947066486, 0.041994229, 0.0109393876]\r\n",
+      "    ]\r\n",
+      "}"
      ]
     }
    ],
    "source": [
-    "# execute in extra shell when using with C++ server from this notebook\n",
-    "!curl -d '{\"instances\": [[50.0, 122.0], [48, 100], [30, 150]]}' -X POST http://localhost:8501/v1/models/insurance:predict"
+    "!curl -d '{\"instances\": [[50.0, 122.0], [48, 100], [30, 150]]}' -X POST http://localhost:8502/v1/models/insurance:predict"
    ]
   },
   {
@@ -2699,49 +2701,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "id": "bc684130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash --bg \n",
+    "\n",
+    "nohup tensorflow_model_server --port=8500 --rest_api_port=8501 \\\n",
+    "  --model_name=insurance --model_base_path=/home/olli/notebooks/mlops/insurance  >server.log 2>&1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "956b2b9c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-11-05 14:06:53.966868: I tensorflow_serving/model_servers/server.cc:89] Building single TensorFlow model file config:  model_name: insurance model_base_path: /home/olli/notebooks/mlops/insurance\n",
-      "2021-11-05 14:06:53.967801: I tensorflow_serving/model_servers/server_core.cc:465] Adding/updating models.\n",
-      "2021-11-05 14:06:53.967823: I tensorflow_serving/model_servers/server_core.cc:591]  (Re-)adding model: insurance\n",
-      "2021-11-05 14:06:54.068624: I tensorflow_serving/core/basic_manager.cc:740] Successfully reserved resources to load servable {name: insurance version: 1}\n",
-      "2021-11-05 14:06:54.068673: I tensorflow_serving/core/loader_harness.cc:66] Approving load for servable version {name: insurance version: 1}\n",
-      "2021-11-05 14:06:54.068695: I tensorflow_serving/core/loader_harness.cc:74] Loading servable version {name: insurance version: 1}\n",
-      "2021-11-05 14:06:54.069397: I external/org_tensorflow/tensorflow/cc/saved_model/reader.cc:38] Reading SavedModel from: /home/olli/notebooks/mlops/insurance/1\n",
-      "2021-11-05 14:06:54.071873: I external/org_tensorflow/tensorflow/cc/saved_model/reader.cc:90] Reading meta graph with tags { serve }\n",
-      "2021-11-05 14:06:54.071907: I external/org_tensorflow/tensorflow/cc/saved_model/reader.cc:132] Reading SavedModel debug info (if present) from: /home/olli/notebooks/mlops/insurance/1\n",
-      "2021-11-05 14:06:54.072251: I external/org_tensorflow/tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2021-11-05 14:06:54.099682: I external/org_tensorflow/tensorflow/cc/saved_model/loader.cc:211] Restoring SavedModel bundle.\n",
-      "2021-11-05 14:06:54.146841: I external/org_tensorflow/tensorflow/cc/saved_model/loader.cc:195] Running initialization op on SavedModel bundle at path: /home/olli/notebooks/mlops/insurance/1\n",
-      "2021-11-05 14:06:54.152558: I external/org_tensorflow/tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 83158 microseconds.\n",
-      "2021-11-05 14:06:54.153416: I tensorflow_serving/servables/tensorflow/saved_model_warmup_util.cc:59] No warmup data file found at /home/olli/notebooks/mlops/insurance/1/assets.extra/tf_serving_warmup_requests\n",
-      "2021-11-05 14:06:54.153963: I tensorflow_serving/core/loader_harness.cc:87] Successfully loaded servable version {name: insurance version: 1}\n",
-      "2021-11-05 14:06:54.155618: I tensorflow_serving/model_servers/server_core.cc:486] Finished adding/updating models\n",
-      "2021-11-05 14:06:54.155667: I tensorflow_serving/model_servers/server.cc:133] Using InsecureServerCredentials\n",
-      "2021-11-05 14:06:54.155691: I tensorflow_serving/model_servers/server.cc:383] Profiler service is enabled\n",
-      "2021-11-05 14:06:54.158575: I tensorflow_serving/model_servers/server.cc:409] Running gRPC ModelServer at 0.0.0.0:8500 ...\n",
-      "[evhttp_server.cc : 245] NET_LOG: Entering the event loop ...\n",
-      "2021-11-05 14:06:54.163282: I tensorflow_serving/model_servers/server.cc:430] Exporting HTTP/REST API at:localhost:8501 ...\n",
-      "^C\n"
+      "2021-11-07 10:17:41.043760: I external/org_tensorflow/tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /home/olli/notebooks/mlops/insurance/1\r\n",
+      "2021-11-07 10:17:41.056323: I external/org_tensorflow/tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 78546 microseconds.\r\n",
+      "2021-11-07 10:17:41.057142: I tensorflow_serving/servables/tensorflow/saved_model_warmup_util.cc:59] No warmup data file found at /home/olli/notebooks/mlops/insurance/1/assets.extra/tf_serving_warmup_requests\r\n",
+      "2021-11-07 10:17:41.057625: I tensorflow_serving/core/loader_harness.cc:87] Successfully loaded servable version {name: insurance version: 1}\r\n",
+      "2021-11-07 10:17:41.059234: I tensorflow_serving/model_servers/server_core.cc:486] Finished adding/updating models\r\n",
+      "2021-11-07 10:17:41.059269: I tensorflow_serving/model_servers/server.cc:133] Using InsecureServerCredentials\r\n",
+      "2021-11-07 10:17:41.059276: I tensorflow_serving/model_servers/server.cc:383] Profiler service is enabled\r\n",
+      "2021-11-07 10:17:41.060116: I tensorflow_serving/model_servers/server.cc:409] Running gRPC ModelServer at 0.0.0.0:8500 ...\r\n",
+      "[evhttp_server.cc : 245] NET_LOG: Entering the event loop ...\r\n",
+      "2021-11-07 10:17:41.062949: I tensorflow_serving/model_servers/server.cc:430] Exporting HTTP/REST API at:localhost:8502 ...\r\n"
      ]
     }
    ],
    "source": [
-    "!tensorflow_model_server --port=8500 --rest_api_port=8501 \\\n",
-    "  --model_name=insurance --model_base_path=/home/olli/notebooks/mlops/insurance"
+    "!tail server.log"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956b2b9c",
+   "id": "498ff545",
    "metadata": {},
    "outputs": [],
    "source": []
