--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -59,34 +59,7 @@
         "\n",
         "https://odsc.com/speakers/deep-dive-into-reinforcement-learning-with-ppo-using-tf-agents-tensorflow-2-0/\n",
         "\n",
-        "Link to this notebook: https://colab.research.google.com/github/embarced/notebooks/blob/master/deep/rl-odsc-2021.ipynb"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-UmYuEi7kH48"
-      },
-      "source": [
-        "## TF-Agents\n",
-        "\n",
-        "* https://www.tensorflow.org/agents\n",
-        "* https://github.com/tensorflow/agents"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0TFyHaSit0cp"
-      },
-      "source": [
-        "## More Resources\n",
-        "\n",
-        "* PPO from scratch\n",
-        "  * https://keras.io/examples/rl/ppo_cartpole/\n",
-        "  * https://github.com/higgsfield/RL-Adventure-2/blob/master/3.ppo.ipynb\n",
-        "* The scientific paper for PPO: https://arxiv.org/abs/1707.06347\n",
-        "* A3C paper, explains several basic techniques such as the utility of the Critic and the additional entropy loss-term: https://arxiv.org/abs/1602.01783\n"
+        "Link to this notebook: https://bit.ly/rl-odsc-2021"
       ]
     },
     {
@@ -104,7 +77,7 @@
         "  * Log into your Google Account or create one when prompted do so so by the \n",
         "  * Go through the notebook and make yourself comfortable with Colab\n",
         "1. Get Access to this notebook\n",
-        "  * https://colab.research.google.com/github/embarced/notebooks/blob/master/deep/rl-odsc-2021.ipynb\n",
+        "  * https://bit.ly/rl-odsc-2021\n",
         "  * Open this notebook in Chrome\n",
         "  * Make a copy to your Google Drive (File->Save a Copy in Drive)\n",
         "  * Rename it to something more speaking"
@@ -161,6 +134,24 @@
         "1. PPO learning still is hard to stabilize\n",
         "  * Out of all the machine learning stuff, deep reinforcement learning requires the least tuning and works out of box😊 (https://twitter.com/vwxyzjn/status/1449907113799602180) \n",
         "1. GAE, an alternative method to calculate reward"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0TFyHaSit0cp"
+      },
+      "source": [
+        "## More Resources\n",
+        "\n",
+        "* PPO from scratch\n",
+        "  * https://keras.io/examples/rl/ppo_cartpole/\n",
+        "  * https://github.com/higgsfield/RL-Adventure-2/blob/master/3.ppo.ipynb\n",
+        "* The scientific paper for PPO: https://arxiv.org/abs/1707.06347\n",
+        "* A3C paper, explains several basic techniques such as the utility of the Critic and the additional entropy loss-term: https://arxiv.org/abs/1602.01783\n",
+        "* TF-Agents\n",
+        "  * https://www.tensorflow.org/agents\n",
+        "  * https://github.com/tensorflow/agents\n"
       ]
     },
     {
@@ -775,7 +766,7 @@
         "train_env = tf_py_environment.TFPyEnvironment(train_py_env)\n",
         "eval_env = tf_py_environment.TFPyEnvironment(eval_py_env)          "
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1093,7 +1084,7 @@
         "    # dropout_layer_params=(0.2, 0.2, 0.2)\n",
         "    )"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1110,7 +1101,7 @@
         "observation = time_step.observation\n",
         "value_net(observation)[0].numpy()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1149,7 +1140,7 @@
         "    # dropout_layer_params=(0.2, 0.2, 0.2)\n",
         "    )"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1166,7 +1157,7 @@
         "distribution, _ = actor_net(observation[0], time_step.step_type, ())\n",
         "distribution.logits.numpy()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1193,7 +1184,7 @@
         "# greedy, highest category\n",
         "distribution.mode().numpy()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1239,7 +1230,7 @@
         "    num_epochs=10) # 25 by default, but we see better results with more frequent updates of the training data\n",
         "tf_ppo_agent.initialize()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1250,7 +1241,7 @@
       "source": [
         "ppo_agent.PPOAgent?"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1289,7 +1280,7 @@
         "tf_ppo_agent.train = common.function(tf_ppo_agent.train)\n",
         "collect_driver.run = common.function(collect_driver.run)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1313,7 +1304,7 @@
         "num_iterations =   500# @param {type:\"integer\"}\n",
         "log_interval = 25 # @param {type:\"integer\"}"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1374,7 +1365,7 @@
         "        print('iteration = {0} / step = {1}: loss = {2}, avg return = {3}, avg length = {4}'.format(\n",
         "            iteration, step, total_loss, avg_return.result().numpy(), avg_length.result().numpy()))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1538,7 +1529,7 @@
         "mpl.rcParams['xtick.labelsize'] = 16\n",
         "mpl.rcParams['ytick.labelsize'] = 16"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1558,7 +1549,7 @@
         "plt.ylabel('Total loss')\n",
         "plt.xlabel('Step');"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1591,7 +1582,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')\n"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1624,7 +1615,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1657,7 +1648,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1690,7 +1681,7 @@
         "plt.xlabel('Step');\n",
         "# plt.yscale('log')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1722,7 +1713,7 @@
         "plt.ylabel('Average Return')\n",
         "plt.xlabel('Step');\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1754,7 +1745,7 @@
         "plt.ylabel('Length of episode')\n",
         "plt.xlabel('Step');\n"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1797,7 +1788,7 @@
         "tf_policy_saver = policy_saver.PolicySaver(tf_ppo_agent.policy)\n",
         "tf_policy_saver.save('policy')"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1835,7 +1826,7 @@
       "source": [
         "!ls -l policy"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1863,7 +1854,7 @@
         "saved_policy = tf.saved_model.load('policy')\n",
         "saved_policy"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1893,7 +1884,7 @@
         "  print(action_step.action.numpy()[0])  \n",
         "  time_step = eval_env.step(action_step.action)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1960,7 +1951,7 @@
         "\n",
         "embed_mp4(video_filename)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
